<resources>
    <string name="app_name">Panacea</string>
    <string name="title_activity_home">Panacea</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_sports">Outdoor Sports</string>
    <string name="menu_mood">Mood Based Content</string>
    <string name="menu_chat">Anonymous Chat</string>
    <string name="menu_motivation">Motivational Content</string>
    <string name="menu_helpline">Helpline</string>
    <string name="menu_faq">FAQs</string>
    <string name="menu_host">Host</string>
    <string name="menu_logout">Logout</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>